fixed warning and added temporary fix to header overlap

--- a/weddingbells/src/components/Header/Header.scss
+++ b/weddingbells/src/components/Header/Header.scss
@@ -1,7 +1,7 @@
 .header-wrapper {
 	// sizing & placement
-	position: fixed;
-	top: 0px;
+	// position: fixed;
+	// top: 0px;
 	width: 100%;
 	height: 80px;
 
